--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hex.hivecentral">
 
-    <permission android:name="android.permission.INTERNET" />
+    <user-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".Application"
